<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/entry_screen_text_hi"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        android:id="@+id/text1"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#737373"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:layout_marginTop="16dp"
        android:text="@string/entry_second_text" />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="8dp"
        android:textColor="@color/white"
        android:id="@+id/letButton"
        android:text="@string/entry_button_text"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.99"/>

</androidx.constraintlayout.widget.ConstraintLayout>